--- a/css/origin.css
+++ b/css/origin.css
@@ -1,101 +1,1 @@
-/* **************** Genaral styles **************** */
-
-* {
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  list-style: none;
-  font-family: 'Marvel', sans-serif;
-  box-sizing: border-box;
-}
-
-a {
-  text-decoration: none;
-  display: inline-block;
-}
-
-body {
-  background-image: url("../img/17208-spiderman.jpg");
-  background-repeat: no-repeat;
-  background-position: top;
-  object-fit: fill;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 50px 1fr 50px;
-  gap: 5%;
-  max-height: 100vh;
-}
-
-/* **************** Header & nav **************** */
-
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  background-image: url("../img/—Pngtree—spider\ spider\ web\ er\ cobweb_3940716.png"), linear-gradient(to top, rgb(172, 18, 18), rgb(28, 28, 165));
-  background-position: center;
-}
-
-header img {
-  max-width: 60%;
-  max-height: 60%;
-  background-color: white;
-  border-radius: 20%;
-}
-
-header h1 {
-  font-weight: 700;
-  font-style: italic;
-  color: blue;
-  text-shadow: red 2px 2px 2px;
-}
-
-header ul {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-header ul li {
-  font-size: large;
-  color: blue !important;
-  text-shadow: red 1px 1px 1px;
-  font-weight: 700;
-  width: 100%;
-}
-
-/* **************** Main **************** */
-
-/* **************** Footer **************** */
-
-footer {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  align-items: center;
-  background-image: url("../img/—Pngtree—spider\ spider\ web\ er\ cobweb_3940716.png"), linear-gradient(to top, rgb(172, 18, 18), rgb(28, 28, 165));
-  background-position: center;
-  opacity: 0.9;
-  color: red;
-  padding: 10px;
-  position: absolute;
-  bottom: 0;
-}
-
-footer section {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-end;
-  gap: 0;
-}
-
-footer section a {
-  width: 5%;
-}
-
-footer section a img {
-  max-width: 66%;
-}
+@import url('../main.css');
