--- a/index.css
+++ b/index.css
@@ -1,152 +1,240 @@
-/* **************** Genaral styles **************** */
+@import url("./main.css");
 
-* {
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  list-style: none;
-  font-family: 'Marvel', sans-serif;
-  box-sizing: border-box;
-}
-
-a {
-  text-decoration: none;
-  display: inline-block;
-}
-
-body {
-  background-image: url("./img/17208-spiderman.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  object-fit: fill;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 50px 1fr 50px;
-  gap: 5%;
-  max-height: 100vh;
-}
-
-/* **************** Header & nav **************** */
-
+/* Page layout styles */
 header {
+  background-color: #202020;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  position: relative;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-image: url("./img/—Pngtree—spider\ spider\ web\ er\ cobweb_3940716.png"), linear-gradient(to top, rgb(172, 18, 18), rgb(28, 28, 165));
-  background-position: center;
 }
 
 header img {
-  max-width: 95%;
-  max-height: 95%;
-  background-color: rgba(255, 0, 0, 0.5);
-  border-radius: 5px;
-  margin-left: 5px;
+ max-width: 100px;
 }
 
-header h1 {
+h1 {
+  font-size: 28px;
   font-weight: 700;
   font-style: italic;
-  color: blue;
-  text-shadow: red 2px 2px 2px;
 }
 
-header ul {
+.main-nav {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.main-nav ul {
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 
-header ul li {
-  font-size: large;
-  color: red !important;
-  text-shadow: blue 1px 1px 1px;
-  font-weight: 700;
-  margin-right: 15px;
-  padding: 5px;
-  background-color: rgba(255, 0, 0, 0.53);
-  border-radius: 5px;
-  box-shadow: black 2px 2px 2px;
+.main-nav ul li {
+  padding: 10px;
+  transition: all 0.2s;
 }
 
-/* **************** Main **************** */
+.main-nav ul li:hover {
+  background-color: #fff;
+  color: #202020;
+  border: solid #e62429 1px;
+  border-radius: 5px;
+  transition: all 0.2s;
+}
+
+.main-nav ul li:last-child {
+  margin-right: 0;
+}
+
+.main-nav ul li a {
+  font-size: 18px;
+}
 
 main {
+  padding: 20px;
+}
+
+.hero-section {
+  background-image: url("./img/17208-spiderman.jpg");
+  background-size: cover;
+  background-position: center;
+  min-height: 575px;
+  padding: 50px;
+  color: #fff;
+  box-shadow: #202020 3px 3px 3px; 
+  border-top-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+}
+
+.hero-content {
+  max-width: 350px;
+  background-color: #202020;
+  padding: 50px;
+  border-top-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+}
+
+h2 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.hero-content p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.cta-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #e62429;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 18px;
+  margin-left: 5px;
+  transition: all 0.2s;
+}
+
+.cta-button:hover {
+  background-color: #fff;
+  color: #202020;
+  transition: all 0.2s;
+}
+
+.gallery-section {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.gallery-exterior {
+  overflow-y: hidden;
+  overflow-x: scroll;
+}
+
+.image-gallery {
+  width: 150%;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.image-gallery img {
+  max-width: 75%;
+  box-shadow: #202020 3px 3px 3px; 
+  border-top-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+}
+
+#last:hover {
+  opacity: 0.46;
+  transition: all 0.2s;
+}
+
+.info-section {
+  margin-top: 40px;
+  text-align: center;
+  width: 75%;
+  margin: 20px auto;
+}
+
+.info-section p {
+  text-align: justify;
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+
+.videogame-section {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.videogame-section .image-gallery {
+  align-items: center;
+}
+
+.videogame-section figure img {
+  width: 250px;
+}
+
+.comic-section {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.comic-section .image-gallery {
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  gap: 1%;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px; 
 }
 
-main section {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  justify-content: space-between;
-  background: url("./img/pngwing.com.png"), rgb(20, 20, 124);
-  background-position: center;
-  object-fit: fill;
-  border-radius: 5%;
-  padding: 3%;
-  margin: 1%;
-  color: red !important;
-  box-shadow: red 1px 1px 5px 1px;
+.comic-section .image-gallery #last img {
+  max-width: 55%;
 }
-
-main section figure {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-main section figure img {
-  max-width: 33%;
-  border-radius: 5%;
-}
-
-#sting {
-  max-width: 66%;
-  min-height: 250px;
-}
-
-#sign {
-  max-width: 50%;
-  min-height: 250px;
-}
-
-/* **************** Footer **************** */
 
 footer {
+  background-color: #202020;
+  color: #fff;
+  text-align: center;
   display: flex;
-  flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  background-image: url("./img/—Pngtree—spider\ spider\ web\ er\ cobweb_3940716.png"), linear-gradient(to bottom, rgb(172, 18, 18), rgb(28, 28, 165));
-  background-position: top;
-  color: red;
-  padding: 10px;
-  position: absolute;
-  bottom: 0;
-  font-weight: bold;
-  text-shadow: black 2px 2px 2px;
 }
 
-footer section {
+footer .logo-container{
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-end;
-  gap: 0;
+  justify-content: space-evenly;
 }
 
-footer section a {
-  width: 5%;
+footer img {
+  max-width: 35px;
+  margin: 10px;
+  border-radius: 50%;
 }
 
-footer section a img {
-  max-width: 66%;
+/* Media Queries (adjust as needed) */
+@media (max-width: 768px) {
+  
+  .gallery-exterior {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 800px;
+  }
+
+  .image-gallery {
+    width: 100%;
+    height: 200%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .comic-section .image-gallery {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  h1 {
+    font-size: 20px;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
+
+  p {
+    font-size: 16px;
+  }
+
+  .cta-button {
+    font-size: 16px;
+  }
 }
