--- a/css/games.css
+++ b/css/games.css
@@ -1,1 +1,45 @@
 @import url('../main.css');
+
+.hero-section {
+  background-image: url('../img/milesmorales.jpg');
+  background-size: cover;
+  background-position: top;
+}
+
+.hero-content {
+  text-align: left;
+}
+
+h2 {
+  text-align: center;
+}
+
+.game-list-section {
+  padding: 20px;
+}
+
+.game-list {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.game-list th,
+.game-list td {
+  border: 1px solid #888;
+  padding: 8px;
+  text-align: left;
+}
+
+.game-list th {
+  background-color: #f5f5f5;
+}
+
+.game-list td a {
+  color: blue;
+  text-decoration: none;
+}
+
+section h2 a {
+color: blue;
+}
