--- a/css/characters.css
+++ b/css/characters.css
@@ -17,7 +17,7 @@
 .characters-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: stretch;
 }
 
