--- a/main.css
+++ b/main.css
@@ -65,7 +65,8 @@ h1 {
 
 .main-nav ul li {
   padding: 10px;
-  transition: all 0.2s;
+  margin: 5px;
+  transition: all 0.5s;
 }
 
 .main-nav ul li:hover {
@@ -73,7 +74,7 @@ h1 {
   color: #202020;
   border: solid #e62429 1px;
   border-radius: 5px;
-  transition: all 0.2s;
+  transition: all 0.5s;
 }
 
 .main-nav ul li:last-child {
@@ -88,6 +89,13 @@ h1 {
 
 main {
   padding: 20px;
+  animation-duration: 5s; 
+  animation-timing-function: ease-in;
+  animation-name: fadein;
+  @keyframes fadein {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
 }
 
 .hero-section {
