--- a/css/games.css
+++ b/css/games.css
@@ -7,7 +7,14 @@
 }
 
 .hero-content {
-  text-align: left;
+  text-align: start;
+  background-color: transparent;
+  backdrop-filter: blur(25px);
+  box-shadow: black 5px 5px 5px 2px;
+}
+
+.hero-content h2 {
+  text-align: start;
 }
 
 h2 {
