--- a/css/comics.css
+++ b/css/comics.css
@@ -1,1 +1,59 @@
 @import url('../main.css');
+
+.hero-section {
+  background-image: url('../img/spidey-comics.webp');
+  background-size: cover;
+  background-position: top;
+}
+
+.hero-content {
+  text-align: start;
+  background-color: transparent;
+  backdrop-filter: blur(25px);
+  box-shadow: black 5px 5px 5px 2px;
+}
+
+.hero-content h2 {
+  text-align: start;
+}
+
+h2 {
+  text-align: center;
+}
+
+.comics {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  margin: 20px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px;
+  border: 1px solid #777;
+  border-radius: 5px;
+  background-color: #ccc;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.card img {
+  width: 100%;
+  max-height: 200px;
+  object-fit: cover;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.card h3 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.card p {
+  font-size: 18px;
+  color: black;
+}
