feature: added media queries for small screens

--- a/css/comics.css
+++ b/css/comics.css
@@ -57,3 +57,9 @@ h2 {
   font-size: 18px;
   color: black;
 }
+
+@media screen and (max-width: 426px) {
+  .comics{
+    grid-template-columns: 1fr;
+  }
+}
